# firstesp32c3

./: .env  Cargo.toml  README.md
.devcontainer/: devcontainer.json
src/: database.rs  main.rs
src/controller/: comisaria.rs  create_task.rs  custom_json_extractor.rs  delete_task.rs  get_json.rs  get_task.rs  guard.rs  home_controller.rs  json_controller.rs  middleware_message.rs  mirror_custom_header.rs  mod.rs  path_variable_controller.rs  query_params.rs  quotable.rs  read_middleware_custom_header.rs  returns_201.rs  update_task.rs  users.rs  validate_with_serde.rs
src/custom_middleware/: mod.rs  set_middleware_custom_header.rs
src/models/: atomic_update.rs  get_task_query_param.rs  header_message.rs  mod.rs  request_task.rs  request_user.rs  response_task.rs  shared_data.rs  weather_forecast.rs
src/routes/: init.rs
src/services/: mod.rs  weather_forecast_service.rs
src/utils/: app_error.rs  jwt.rs
