[package]
name = "rust_first_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.2", features = ["headers"] }
hyper = { version = "0.14.11", features = ["full"] }
tokio = { version = "1.24.2", features = ["full"] }
tower = { version = "0.4.8", features = ["full"] }
tower-http = { version = "0.3.5", features = ["cors"] }
tokio-stream = "0.1.7"
async-session = "3.0.0"
http = "0.2.4"
serde = "1.0.151"
chrono = "0.4.19"
rand = "0.8.4"
